# MOG-Background-Subtractor

./: CMakeLists.txt  README.md  utils.cpp  utils.h
src/: main.cpp  mgg_substractor.cpp  mgg_substractor.h  mog_subtractor.cpp  mog_subtractor.h  opencv_include.h  utils.cpp  utils.h
